implemented the map view

--- a/app/frontend/src/App/Components/Calenadar/styles.scss
+++ b/app/frontend/src/App/Components/Calenadar/styles.scss
@@ -12,6 +12,7 @@
     color: $gray-dark;
     border-top: 1px solid $gray;
     padding-top: 1rem;
+    margin: auto;
 
     &__navigation {
       align-items: center;
