--- a/app/frontend/src/App/Components/Filters/styles.scss
+++ b/app/frontend/src/App/Components/Filters/styles.scss
@@ -140,3 +140,41 @@
     }
   }
 }
+
+.map {
+  z-index: 2;
+  margin-top: 30px;
+  width: 90%;
+  height: 80px;
+  display: flex;
+  padding: 12px 25px;
+  background-color: $white;
+  border: 1px solid #dadce9;
+  @media (max-width: 575.98px) {
+    flex-wrap: wrap;
+    height: fit-content;
+    padding: 25px 25px;
+  }
+  &-filter {
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
+    padding: 0 25px;
+    background-color: $white;
+    @media (max-width: 575.98px) {
+      padding: 5px 0px;
+    }
+
+    &-btn {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-radius: 3px;
+      padding: 1rem;
+      background-color: $white;
+      border: 1px solid $gray;
+      outline: none;
+    }
+  }
+}
