--- a/app/frontend/src/Admin/Components/ExpandableTable/table.scss
+++ b/app/frontend/src/Admin/Components/ExpandableTable/table.scss
@@ -152,6 +152,7 @@
 }
 .ReactTable .rt-tbody .rt-tr-group {
   border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+  padding: 0.25rem 2rem !important;
 }
 .ReactTable .rt-tbody .rt-tr-group:last-child {
   border-bottom: 0;
