--- a/app/frontend/src/Admin/Components/TripHeader/styles.scss
+++ b/app/frontend/src/Admin/Components/TripHeader/styles.scss
@@ -3,13 +3,11 @@
 
 .spon-admin-trip-header {
   width: 100%;
-  height: 7rem;
   padding: 0 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background: $light-gray;
-
 
   &__bulk {
     height: 7rem;
@@ -19,35 +17,31 @@
   }
 
   &__select {
-    height: 7rem;
     width: 42rem;
     padding: 0 rc(15) 0 rc(5);
     margin-top: rc(1);
-    display: flex; 
-    flex-direction: column;
-    align-items: baseline;
+    display: flex;
 
-    &__From{
+    &__From {
       width: 60%;
-      height: 3rem;
       margin-top: rc(3);
-      margin-bottom: rc(3);
       margin-right: 1.5rem;
     }
-    &__To{
+    &__To {
       width: 60%;
-      height: 3rem;
       margin-top: rc(3);
-      margin-bottom: rc(3);
       margin-right: 1rem;
     }
+  }
+  input {
+    margin: 15px;
   }
 
   &__filters {
     background: $violet-light;
     padding: rc(20) rc(20) 0 rc(20);
   }
-  
+
   &__inner {
     display: flex;
     align-items: center;
@@ -72,7 +66,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
     margin-right: 0.5rem;
     margin-left: auto;
 
@@ -84,7 +78,7 @@
       &--big {
         padding: 0 1rem 0 1.25rem;
         margin-right: 0.5rem;
-      } 
+      }
     }
 
     .dropdown {
@@ -92,7 +86,7 @@
       overflow: hidden;
       margin-top: 0.75rem;
     }
-    
+
     .dropdown .dropbtn {
       margin-bottom: 0.25rem;
       cursor: pointer;
@@ -110,21 +104,22 @@
       font-family: inherit;
       margin: 0;
     }
-    
-    .navbar a:hover, .dropdown:hover .dropbtn {
+
+    .navbar a:hover,
+    .dropdown:hover .dropbtn {
       background-color: $blue;
     }
-    
+
     .dropdown-content {
       cursor: pointer;
       display: none;
       position: absolute;
       background-color: #f9f9f9;
       width: 11rem;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
-    
+
     .dropdown-content a {
       float: none;
       color: $dark-blue;
@@ -133,11 +128,11 @@
       display: block;
       text-align: left;
     }
-    
+
     .dropdown-content a:hover {
       background-color: #ddd;
     }
-    
+
     .dropdown:hover .dropdown-content {
       display: block;
     }
