SMS-479 SMS-443 SMS-482 SMS-435 done

--- a/app/frontend/src/App/Statics/ReadFaq/styles.scss
+++ b/app/frontend/src/App/Statics/ReadFaq/styles.scss
@@ -8,7 +8,7 @@
   padding: 5rem;
   background-color: $gray-light;
   @include respond(mobile) {
-    padding: 0 1rem;
+    padding: 4rem 1rem;
     width: 100%;
     flex-direction: column-reverse;
     // transform: translateY(-10rem);
