SMS-463 SMS-481 SMS-485

--- a/app/frontend/src/App/Components/SelectPanel/styles.scss
+++ b/app/frontend/src/App/Components/SelectPanel/styles.scss
@@ -142,6 +142,9 @@
     letter-spacing: 1px;
     margin-left: 2rem;
     text-decoration: none;
+    @include respond(mobile) {
+      margin-left: 0rem;
+    }
   }
 
   #editselect:hover, #editselect:focus {
