--- a/app/frontend/src/App/Containers/Deselect/styles.scss
+++ b/app/frontend/src/App/Containers/Deselect/styles.scss
@@ -51,6 +51,9 @@
         margin-bottom: 2.5rem;
       }
     }
+    &-normalBold{
+      font-weight: normal;
+    }
   }
   &-destinations {
     display: flex;
