--- a/app/frontend/src/App/Components/Slider/styles.scss
+++ b/app/frontend/src/App/Components/Slider/styles.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  // justify-content: center;
+  justify-content: center;
   padding: 5rem;
   @include respond(mobile) {
     flex-direction: column;
