sms-479 sms-482 sms-435 sms-481 done

--- a/app/frontend/src/App/Components/Calenadar/styles.scss
+++ b/app/frontend/src/App/Components/Calenadar/styles.scss
@@ -40,7 +40,7 @@
             color: buttontext;
 
             &:disabled {
-              color: #7b899f;
+              color: #808080;
             }
           }
         }
