--- a/app/frontend/src/App/Statics/ReadFaq/styles.scss
+++ b/app/frontend/src/App/Statics/ReadFaq/styles.scss
@@ -60,6 +60,11 @@
     }
   }
   &-title {
+    text-align: left;
+
+    @include respond(mobile) {
+      text-align: center;
+    }
     &.title {
       font-weight: bold;
       font-size: 0.9rem;
