--- a/app/frontend/src/App/Components/Search/styles.scss
+++ b/app/frontend/src/App/Components/Search/styles.scss
@@ -143,6 +143,11 @@
       border-radius: 3px;
       box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
       z-index: 2;
+
+      @include respond(mobile) {
+        width: 100%;
+      }
+
       button {
         background-color: $white;
         border-color: $border;
