--- a/app/frontend/src/Common/Components/NavBar/styles.scss
+++ b/app/frontend/src/Common/Components/NavBar/styles.scss
@@ -65,7 +65,7 @@
     margin-left: 20%;
     justify-content: flex-end;
     @include respond(tab) {
-      margin-left: 10%;
+      margin-left: 6%;
     }
     &--close {
       @include respond(mobile) {
@@ -92,6 +92,10 @@
     color: $violet-light;
     text-decoration: none;
     z-index: 2;
+
+    @include respond(tab) {
+      font-size: 1rem;
+    }
 
     &--open {
       @include respond(mobile) {
@@ -151,6 +155,9 @@
 
     img {
       height: 3.5rem;
+      @include respond(tab) {
+        height: 5.5rem;
+      }
 
       @include respond(mobile) {
         height: 4rem;
