--- a/app/frontend/src/App/Components/Title/styles.scss
+++ b/app/frontend/src/App/Components/Title/styles.scss
@@ -21,7 +21,30 @@
   }
   font-size: 3rem;
   width: 35rem;
+
+  @include respond(tab) {
+    font-size: 3.2rem;
+  }
+
   span {
     color: $main-blue;
   }
+  
+}
+
+.deselect-title{
+  width: 30rem;
+}
+
+.hide-desc{
+  display: none;
+}
+
+.desc{
+  color: $white;
+  text-align: center;
+  max-width: 100%;
+  word-break: break-word;
+  font-size: 2rem;
+  padding-bottom: 4rem;
 }
