--- a/app/frontend/src/App/Containers/Deselect/styles.scss
+++ b/app/frontend/src/App/Containers/Deselect/styles.scss
@@ -43,6 +43,12 @@
         color: $violet;
       }
     }
+    &-margin {
+      @include respond(mobile) {
+        margin: 20px !important;
+        text-align: center;
+      }
+    }
     button {
       margin-top: 0;
       margin-right: 1rem;
@@ -51,8 +57,23 @@
         margin-bottom: 2.5rem;
       }
     }
-    &-normalBold{
+    &-normalBold {
       font-weight: normal;
+      display: flex;
+    }
+    &-optional {
+      @include respond(mobile) {
+        font-size: 0;
+      }
+    }
+  }
+  .hideHeader {
+    display: none;
+    @include respond(mobile) {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
     }
   }
   &-destinations {
