sms-500 sms-492 fix iPad, typo error

--- a/app/frontend/src/App/Components/Title/styles.scss
+++ b/app/frontend/src/App/Components/Title/styles.scss
@@ -48,3 +48,12 @@
   font-size: 2rem;
   padding-bottom: 4rem;
 }
+
+.landing-title{
+  @include respond(tab) {
+    width: 38rem;
+  }
+  @include respond(mobile) {
+    width: 90%;
+  }
+}
