--- a/app/frontend/src/App/Containers/Deselect/styles.scss
+++ b/app/frontend/src/App/Containers/Deselect/styles.scss
@@ -60,6 +60,7 @@
     &-normalBold {
       font-weight: normal;
       display: flex;
+      flex-wrap: wrap;
     }
     &-optional {
       @include respond(mobile) {
