--- a/app/frontend/src/App/Containers/Landing/styles.scss
+++ b/app/frontend/src/App/Containers/Landing/styles.scss
@@ -19,12 +19,9 @@
   }
 
   .title {
-    @include respond(tab) {
-      width: 55%;
-    }
 
     @include respond(mobile) {
-      width: 90%;
+      width: 30rem;
       font-size: 36px;
     }
   }
