--- a/app/frontend/src/App/Components/Title/styles.scss
+++ b/app/frontend/src/App/Components/Title/styles.scss
@@ -29,27 +29,39 @@
   span {
     color: $main-blue;
   }
-  
 }
 
-.deselect-title{
-  width: 30rem;
+.deselect-title {
+  width: 28rem;
+
+  @include respond(tab) {
+    padding-bottom: 3rem;
+  }
+
+  @include respond(mobile) { 
+    padding-bottom: 0;
+  }
 }
 
-.hide-desc{
+.hide-desc {
   display: none;
 }
 
-.desc{
-  color: $white;
-  text-align: center;
-  max-width: 100%;
-  word-break: break-word;
-  font-size: 2rem;
-  padding-bottom: 4rem;
+.desc {
+  display: none;
+
+  @include respond(mobile) {
+    display: block;
+    color: $white;
+    text-align: center;
+    max-width: 100%;
+    word-break: break-word;
+    font-size: 2rem;
+    padding-bottom: 4rem;
+  }
 }
 
-.landing-title{
+.landing-title {
   @include respond(tab) {
     width: 38rem;
   }
