sms 441 and 497 done 494

--- a/app/frontend/src/App/Components/BillingStatus/styles.scss
+++ b/app/frontend/src/App/Components/BillingStatus/styles.scss
@@ -101,6 +101,23 @@
       display: flex;
     }
 
+    @include respond(mobile){
+      flex-direction: column !important;
+      align-items: center;
+    }
+
+    .billing-submit-back{
+      margin-top: 0;
+
+      @include respond(mobile){
+        margin-top: 2rem !important;
+      }
+
+      @include respond(tab){
+        margin-top: 0;
+      }
+    }
+
     .button {
       max-width: 100%;
     }
