--- a/app/frontend/src/App/Components/Steps/styles.scss
+++ b/app/frontend/src/App/Components/Steps/styles.scss
@@ -45,7 +45,7 @@
           padding: 0 1rem;
           margin: 0;
           span {
-            color: $red;
+            color: $input;
           }
         }
         img {
@@ -61,6 +61,9 @@
       }
       p {
         color: $inactive;
+        span{
+          color: $inactive;
+        }
       }
       img {
         opacity: 0.5;
