--- a/app/frontend/src/App/Containers/Select/styles.scss
+++ b/app/frontend/src/App/Containers/Select/styles.scss
@@ -72,6 +72,31 @@
         font-family: Poppins;
         font-size: 12px;
       }
+      .capsule {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+        background-color: #ffffff;
+        border: 1px solid #dadce9;
+        width: 18rem;
+        @include respond(mobile) {
+          display: none;
+        }
+        &-header {
+          color: #2e333b;
+          font-size: 1.1rem;
+          font-weight: 500;
+        }
+        &-text {
+          margin: 12px 0;
+          color: #7b899f;
+          font-weight: 400;
+          font-size: 0.875rem;
+          text-align: center;
+        }
+      }
     }
     &-destinations {
       @include respond(mobile) {
