SMS-440 image change

--- a/app/frontend/src/App/Containers/Select/styles.scss
+++ b/app/frontend/src/App/Containers/Select/styles.scss
@@ -81,6 +81,10 @@
         background-color: #ffffff;
         border: 1px solid #dadce9;
         width: 18rem;
+        img {
+          width: 100%;
+          height: auto;
+        }
         @include respond(mobile) {
           display: none;
         }
