--- a/app/frontend/src/App/Components/Billing/styles.scss
+++ b/app/frontend/src/App/Components/Billing/styles.scss
@@ -48,7 +48,6 @@
   &-step {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
     &:first-of-type {
       margin-right: 0.5rem;
@@ -175,7 +174,10 @@
       &-back {
         justify-content: center;
         button {
-          text-align: center;
+          display: flex;
+          font-size: 12px;
+          align-items: center;
+          justify-content: space-around;
         }
       }
     }
@@ -185,14 +187,14 @@
       }
     }
     &-step_icon {
-      width: 30px;
-      height: 30px;
+      width: 35px;
+      height: 35px;
+      margin: 0 0 5px 0;
     }
     &-step {
       flex-direction: column;
-    }
-    &-step_icon {
-      margin: 0;
+      height: 80px;
+      font-size: 12px;
     }
   }
 }
