sms-498 fix , narrow down blue

--- a/app/frontend/src/App/Components/Billing/styles.scss
+++ b/app/frontend/src/App/Components/Billing/styles.scss
@@ -23,6 +23,7 @@
       font-weight: bold;
       color: $violet;
       text-align: left;
+      font-size: 16px;
     }
     &-back {
       display: flex;
