--- a/app/frontend/src/App/Components/Trips/styles.scss
+++ b/app/frontend/src/App/Components/Trips/styles.scss
@@ -1,3 +1,5 @@
+@import '../../../Common/Utils/Styles/mixin.scss';
+
 .trips {
     position: absolute;
     z-index: 1;
@@ -12,6 +14,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include respond(mobile) {
+      width: 90%;
+    }
     &-foter {
       display: flex;
       justify-content: space-between;
