--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -110,9 +110,9 @@
     border-bottom: 1px solid;
     border-right: 1px solid;
     border-left: 1px solid;
-    border-radius: 3px;
+    border-radius: 0 0 3px 3px;
     border-color: $gray;
-    padding: 0 1rem;
+    padding: 1rem;
     background-color: $white;
     position: relative;
 
@@ -142,7 +142,10 @@
     &-row {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      margin-bottom: 1rem;
+      @include respond(mobile) {
+        margin-top: 1rem;
+      }
     }
 
     &-type {
@@ -184,6 +187,7 @@
       font-size: 1.1rem;
       font-weight: 500;
       margin: 0;
+      margin-bottom: 0.5rem;
 
       @include respond(tab) {
         font-size: 1.65rem;
@@ -194,6 +198,7 @@
       color: $label;
       font-weight: 500;
       font-size: rc(12);
+      margin: 0;
 
       @include respond(mobile) {
         font-size: rc(18);
@@ -223,7 +228,7 @@
       color: $violet;
       font-size: 1rem;
       font-weight: 600;
-      margin: 1rem 0 0.5rem 0;
+      margin: 1rem 0 0 0;
       @include respond(tab) {
         font-size: 1.4rem;
       }
