--- a/app/frontend/src/App/Containers/Deselect/styles.scss
+++ b/app/frontend/src/App/Containers/Deselect/styles.scss
@@ -79,5 +79,8 @@
       max-width: unset;
       justify-content: space-between;
     }
+    .destination-when-not-selected {
+      height: 40rem;
+    }
   }
 }
