--- a/app/frontend/src/App/Components/Calenadar/styles.scss
+++ b/app/frontend/src/App/Components/Calenadar/styles.scss
@@ -65,6 +65,7 @@
     }
   }
   .react-calendar__tile:disabled {
-    background-color: darken($color: #f0f0f0, $amount: 15);
+    background-color: darken($color: #f0f0f0, $amount: 15) !important;
+    color: #808080 !important;
   }
 }
