sms-498 and sms-500 fix

--- a/app/frontend/src/App/Components/Billing/styles.scss
+++ b/app/frontend/src/App/Components/Billing/styles.scss
@@ -23,7 +23,10 @@
       font-weight: bold;
       color: $violet;
       text-align: left;
-      font-size: 16px;
+
+      @include respond(mobile) {
+        font-size: 16px;
+      }
     }
     &-back {
       display: flex;
