--- a/app/frontend/src/App/Containers/Payment/styles.scss
+++ b/app/frontend/src/App/Containers/Payment/styles.scss
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 74rem;
+    max-width: 76rem;
 
     @include respond(tab) {
       margin: 0;
@@ -62,6 +62,7 @@
     width: 35%;
     flex-grow: 1;
     margin-left: 3%;
+    margin-right: 1rem;
   }
   @media screen and (max-width: 1024px) {
     &-status {
