--- a/app/frontend/src/App/Containers/Deselect/styles.scss
+++ b/app/frontend/src/App/Containers/Deselect/styles.scss
@@ -71,9 +71,10 @@
   &-destinations {
     display: flex;
     width: 100%;
-    max-width: 76rem;
+    max-width: 77rem;
     flex-wrap: wrap;
     padding-bottom: 5rem;
+    justify-content: space-between;
     @include respond(tab) {
       width: 90%;
       max-width: unset;
