--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -21,6 +21,8 @@
   flex-direction: column;
   background-color: $white;
   margin-bottom: 2rem;
+  margin-right: 1rem;
+
   @media (max-width: 575.98px) {
     .destination {
       width: 290px;
