--- a/app/frontend/src/App/Components/Steps/styles.scss
+++ b/app/frontend/src/App/Components/Steps/styles.scss
@@ -16,6 +16,11 @@
     text-decoration: none;
     cursor: default;
     margin-right: 1rem;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+
     &-cnt {
       display: flex;
       flex-direction: column;
