--- a/app/frontend/src/App/Containers/EditSelection/styles.scss
+++ b/app/frontend/src/App/Containers/EditSelection/styles.scss
@@ -44,7 +44,7 @@
     @include respond(mobile) {
       margin: 0 auto 13px auto;
       float: none;
-      width: 90%;
+      width: 100%;
       height: 50px;
     }
   }
@@ -78,12 +78,7 @@
       float: left;
 
       @include respond(mobile) {
-        text-align: center;
-        margin: 0 0 2rem 0 !important;
-        padding: 0 1.2rem;
-        width: 100%;
-        font-size: 2.4rem !important;
-        line-height: 1.42;
+        display: none;
       }
 
       span {
