SMS-503 small issue fixed

--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -15,7 +15,7 @@
 
 .destination {
   width: 18.2rem;
-  height: 26rem;
+  min-height: 25rem;
   border-radius: 3px;
   display: flex;
   flex-direction: column;
