--- a/app/frontend/src/App/Containers/Deselect/styles.scss
+++ b/app/frontend/src/App/Containers/Deselect/styles.scss
@@ -85,7 +85,7 @@
       }
     }
     .destination-when-not-selected {
-      height: 40rem;
+      height: 40rem !important;
     }
     .destination:nth-of-type(4n) {
       margin-right: auto;
