--- a/app/frontend/src/Common/Utils/Styles/colors.scss
+++ b/app/frontend/src/Common/Utils/Styles/colors.scss
@@ -8,6 +8,7 @@ $violet-dark: #5556dc;
 $violet: #4142a6;
 $blue-light: #5dc3fd;
 $blue: #1da4f0;
+$orange: #fba517;
 $darker-blue: #1e7be2;
 $red: #f05971;
 $error-red: #ff3b30;
