--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -60,7 +60,7 @@
     width: 100%;
 
     @include respond(tab) {
-      height: 18rem;
+      height: 15.8rem;
     }
 
     @include respond(hone) {
@@ -79,6 +79,15 @@
       height: 4rem;
       @include respond(tab) {
         height: 7rem;
+      }
+    }
+    &.medium {
+      height: 6.7rem;
+      @include respond(big) {
+        height: 4.85rem;
+      }
+      @include respond(tab) {
+        height: 9.2rem;
       }
     }
     div {
@@ -136,6 +145,25 @@
           width: 30px;
           height: 30px;
         }
+      }
+    }
+
+    .destination-hurry-up-message {
+      display: flex;
+      border-radius: 3px;
+      background-color: rgba(240, 89, 113, 0.16);
+      margin-bottom: 15px;
+      align-items: center;
+      img {
+        margin: 0 15px;
+      }
+      &-text {
+        color: #f05971;
+        font-size: 0.875rem;
+        height: 54px;
+        display: flex;
+        justify-content: start;
+        align-items: center;
       }
     }
 
@@ -238,8 +266,13 @@
       font-size: 1rem;
       font-weight: 600;
       margin: 1rem 0 0 0;
+      min-height: 3rem;
       @include respond(tab) {
         font-size: 1.4rem;
+      }
+      &--stripped {
+        color: $red;
+        text-decoration: line-through;
       }
     }
   }
