--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -46,7 +46,7 @@
 
   @include respond(mobile) {
     width: 100%;
-    height: 40rem;
+    height: 41rem;
     margin: 0 auto 4rem auto;
   }
   &.overlay {
@@ -83,11 +83,14 @@
     }
     &.medium {
       height: 6.7rem;
+      @include respond(bigger) {
+        height: 5.7rem;
+      }
       @include respond(big) {
         height: 4.85rem;
       }
       @include respond(tab) {
-        height: 9.2rem;
+        height: 10rem;
       }
     }
     div {
@@ -147,12 +150,17 @@
         }
       }
     }
+    .spon-btn.blue:hover {
+      background-color: #1da4f0;
+      box-shadow: 0 9px 31px 0 rgba(93, 195, 253, 0.3);
+    }
 
     .destination-hurry-up-message {
       display: flex;
       border-radius: 3px;
       background-color: rgba(240, 89, 113, 0.16);
       margin-bottom: 15px;
+      padding-right: 5px;
       align-items: center;
       img {
         margin: 0 15px;
@@ -164,15 +172,21 @@
         display: flex;
         justify-content: start;
         align-items: center;
+        @include respond(mobile) {
+          font-size: 1.4rem;
+        }
+      }
+      @include respond(mobile) {
+        margin-bottom: 0 !important;
       }
     }
 
     &-row {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 1rem;
+      padding-bottom: 1rem;
       @include respond(mobile) {
-        margin-top: 1rem;
+        padding-top: 1rem;
       }
     }
 
@@ -186,7 +200,7 @@
       font-weight: bold;
 
       @include respond(tab) {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         font-weight: 500;
       }
 
@@ -238,7 +252,7 @@
       margin: 0;
 
       @include respond(mobile) {
-        font-size: rc(18);
+        font-size: 1.2rem;
       }
     }
 
@@ -249,7 +263,7 @@
       font-size: rc(14);
 
       @include respond(mobile) {
-        font-size: rc(18);
+        font-size: 1.2rem;
       }
     }
 
@@ -266,13 +280,20 @@
       font-size: 1rem;
       font-weight: 600;
       margin: 1rem 0 0 0;
-      min-height: 3rem;
+      min-height: 3.4rem;
       @include respond(tab) {
         font-size: 1.4rem;
       }
       &--stripped {
-        color: $red;
+        font-size: 0.8rem;
         text-decoration: line-through;
+        @include respond(tab) {
+          font-size: 1.2rem;
+        }
+      }
+
+      &--final {
+        color: $red;
       }
     }
   }
@@ -477,6 +498,6 @@
     height: unset !important;
   }
   @include respond(mobile) {
-    height: 34rem !important;
+    height: 38rem !important;
   }
 }
