[SMS-537] Mobile version

--- a/app/frontend/src/App/Containers/Select/styles.scss
+++ b/app/frontend/src/App/Containers/Select/styles.scss
@@ -142,6 +142,10 @@
         margin-right: auto;
       }
     }
+    &.mobile {
+      height: 0;
+      overflow: hidden;
+    }
   }
 }
 .map-cnt {
