--- a/app/frontend/src/App/Components/Destination/styles.scss
+++ b/app/frontend/src/App/Components/Destination/styles.scss
@@ -54,6 +54,16 @@
       z-index: 6;
     }
   }
+  &.mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh !important;
+    background-color: #ffffff;
+    z-index: 2;
+    overflow: scroll;
+  }
   &-top {
     position: relative;
     height: 11rem;
@@ -93,7 +103,7 @@
         height: 10rem;
       }
     }
-    div {
+    .badge {
       position: absolute;
       color: $white;
       background-color: $red;
@@ -327,7 +337,7 @@
       display: flex;
       flex-direction: column;
       margin-bottom: 1rem;
-      padding: 0 1rem;
+      padding: 0 1rem 7rem 1rem;
     }
 
     &-error {
@@ -487,6 +497,25 @@
         margin-right: 1rem;
         background-color: transparent;
       }
+    }
+  }
+  &-close-mobile {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white !important;
+    border-radius: 50% !important;
+    border: none !important;
+    right: 18px;
+    top: 18px;
+    width: 29px !important;
+    height: 29px !important;
+    box-shadow: 0px 0px 10px rgba(92, 96, 146, 0.94);
+    z-index: 10;
+    img {
+      width: 12.57px !important;
+      height: 12px !important;
     }
   }
 }
