--- a/app/frontend/src/App/Components/Search/styles.scss
+++ b/app/frontend/src/App/Components/Search/styles.scss
@@ -139,14 +139,27 @@
       flex-direction: column;
       position: absolute;
       left: 0;
-      margin-top: 100px;
+      margin-top: 95px;
       padding: 15px;
       background: white;
       border-radius: 3px;
       box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
       z-index: 2;
 
+      @include respond(bigger) {
+        margin-top: 85px;
+      }
+
+      @include respond(big) {
+        margin-top: 83px;
+      }
+
+      @include respond(tab) {
+        margin-top: 90px;
+      }
+
       @include respond(mobile) {
+        margin-top: 95px;
         width: 100%;
       }
 
